website/code/lists-icpp.log
BUILD COMMANDS FOR: lists.icpp

Fri Mar 31 20:11:18 PST 2006

/opt/intel/cc/9.0/bin/icpc -c -O3 -ip -static -unroll  lists.c++ -o lists.c++.o &&  \
        /opt/intel/cc/9.0/bin/icpc lists.c++.o -o lists.icpp_run -O3 -ip -static -unroll  
lists.c++(27): error: namespace "std" has no member "iota"
      __gnu_cxx::iota(li1.begin(), li1.end(), 1);
                 ^

compilation aborted for lists.c++ (code 2)
make[3]: [lists.icpp_run] Error 2 (ignored)
rm: cannot remove `lists.c++.o': No such file or directory
rm: cannot remove `lists.o': No such file or directory
make[3]: [lists.icpp_run] Error 1 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

lists.icpp_run %A
Error, could not exec lists.icpp_run 4 (No such file or directory)
PATH=/opt/shootout/shootout/bench/lists:/opt/shootout/shootout/bench/lists/tmp:/opt/xds_x86/bin:/opt/intel/fc/9.0/bin:/opt/intel/cc/9.0/bin:/usr/lib/poplog/current-poplog/pop/pop:/usr/lib/smarteiffel/bin:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games:/usr/lib/poplog/current-poplog/pop/com
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
